# C4-AI

./: .gitignore  README.md  Weekly Report 1  Weekly Report 2  Weekly Report 3  connect_4.py  main.py  pyproject.toml  tasks.py
Documentations/: Implementation Document  Implementation Document.md  Specification Document.md  Testing Ducoment.md  User Instructions.md
Documentations/Weekly Reports/: Weekly Report 4  Weekly Report 5  Weekly Report 6.md
src/: connect_4.py  main.py
src/advanced_tests/: test_E2E.py  test_puzzles.py
src/tests/: E2E_test.py  unit_test.py
src/unit_tests/: test_c4.py  test_main.py
