[project]
name = "c4-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "Erik Vormala",email = "erik.vormala@helsinki.fi"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.8"

